# CMake-with-AVR

./: CMakeLists.txt  README.md
simple_project/: DIO_config.h  DIO_int.h  DIO_prog.c  LCD_config.h  LCD_int.h  LCD_prog.c  STDTypes.h  Seven_segment_config.c  Seven_segment_int.h  Seven_segment_prog.c  errorState.h  main.c
